--- a/src/app/features/home/home.css
+++ b/src/app/features/home/home.css
@@ -29,7 +29,7 @@
         align-items: center;
         gap: 0.5rem;
         padding: 0.75rem 1.5rem;
-        background-color: #007bff;
+        background-color: #24cd0a;
         color: white;
         text-decoration: none;
         border-radius: 5px;
@@ -37,7 +37,7 @@
     }
 
     .logged li a:hover {
-        background-color: #0056b3;
+        background-color: #878e06;
     }
 
     .logged li a i {
