API naming fixed to songs

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,9 +9,9 @@
   </aside>
 </div> -->
 
-<router-outlet />
+<router-outlet ></router-outlet>
 
 <app-footer></app-footer>
 <!-- <app-beroetest></app-beroetest> -->
 
-<router-outlet />
+<!-- <router-outlet /> -->
