--- a/src/app/shared/components/header/header.html
+++ b/src/app/shared/components/header/header.html
@@ -31,11 +31,11 @@
                 <a routerLink="/home">Home</a>
             </li>
             <li>
-                <a routerLink="/themes">Songs</a>
+                <a routerLink="/songs">Songs</a>
             </li>
             @if (isLoggedIn()) {
             <li>
-                <a routerLink="/add-theme">New Artist</a>
+                <a routerLink="/change-song">New Artist</a>
             </li>
             }
         </ul>
