Added a clock component by using signal on Header

--- a/src/app/shared/components/header/header.html
+++ b/src/app/shared/components/header/header.html
@@ -23,6 +23,9 @@
                 </li>
                 }
             </ul>
+            <ul>
+                <app-clock></app-clock>
+            </ul>
         </div>
     </div>
     <nav>
