All Artist lists completed from both artist APIs and visible.

--- a/src/app/shared/components/header/header.html
+++ b/src/app/shared/components/header/header.html
@@ -36,15 +36,18 @@
             <li>
                 <a routerLink="/songs">Deezer Songs</a>
             </li>
-             <li>
+            <li>
                 <a routerLink="/songs2">Jamendo Songs</a>
             </li>
             @if (isLoggedIn()) {
             <li>
                 <a routerLink="/change-song">New Deezer Artist</a>
             </li>
-             <li>
+            <li>
                 <a routerLink="/change-song2">New Jamendo Artist</a>
+            </li>
+            <li>
+                <a routerLink="/artists">All Artists</a>
             </li>
             }
         </ul>
