--- a/src/app/features/auth/register/register.css
+++ b/src/app/features/auth/register/register.css
@@ -122,3 +122,13 @@
         text-align: center;
         margin: 0;
     }
+
+    input.ng-valid {
+        border-left: 5px solid #42A948;
+        /* green */
+    }
+
+    input.ng-invalid.ng-touched {
+        border-left: 5px solid #A94442;
+        /* red */
+    }
