--- a/src/app/features/themes/artist-item/theme-item.html
+++ b/src/app/features/themes/artist-item/theme-item.html
@@ -2,7 +2,7 @@
     <div class="theme-name-wrapper">
         <div class="theme-name">
             <a href="#" class="normal">
-                <h2>{{artist.name}} - Deezer </h2>
+                <h2>{{artist.name}} </h2>
             </a>
             <div class="columns">
                 <div [ngClass]="variant">
