--- a/src/app/features/profile/profile.html
+++ b/src/app/features/profile/profile.html
@@ -39,12 +39,12 @@
             </div>
 
         </div>
-        <div class="flex">
+        <!-- <div class="flex">
             <p>Phone: </p>
             <div class="input-container">
                 <input type="text" id="tel" formControlName="phone">
             </div>
-        </div>
+        </div> -->
         <div class="button-container">
             <button (click)="onCancel()" type="button" class="red-button">Cancel</button>
             <button [disabled]="profileForm.invalid" type="submit" class="green-button">Save</button>
