--- a/src/app/features/auth/login/login.css
+++ b/src/app/features/auth/login/login.css
@@ -70,7 +70,7 @@ button:disabled {
 }
 
 button:hover:not(:disabled) {
-    background-color: #0056b3;
+    background-color: #e9f511;
 }
 
 .text-center {
