Comments feature added to cover requirement for project: •	At least one collection, different from the User collection, with all CRUD operations (create, read, update, delete)

--- a/src/app/features/themes/artist-item/theme-item.html
+++ b/src/app/features/themes/artist-item/theme-item.html
@@ -8,6 +8,7 @@
                 <div [ngClass]="variant">
                     <p>Artist id: <time>{{artist.id}}</time></p>
                 </div>
+                <app-comment-box [artistId]="artist.id"></app-comment-box>
             </div>
         </div>
        
