--- a/src/app/features/auth/register/register.css
+++ b/src/app/features/auth/register/register.css
@@ -48,7 +48,7 @@
     }
 
     .register button {
-        /* background-color: #234465; */
+        background-color: #a7eb0b;
         color: white;
         border: none;
         border-radius: 0.5em;
@@ -62,6 +62,7 @@
 
     .register button:hover:not(:disabled) {
         transform: scale(1.05);
+        background-color: #42A948;
     }
 
     .register button:disabled {
