--- a/src/app/features/auth/register/register.html
+++ b/src/app/features/auth/register/register.html
@@ -4,33 +4,29 @@
 
     <!-- username -->
     <p class="field field-icon">
-      <label for="username"><span><i class="fas fa-user"></i></span></label>
-        <input type="text" id="username" placeholder="Johny"
-        name="username"
-        formControlName="username"
-        >
+      <label for="username"><span><i class="fas fa-user"
+            [class.text-danger]="registerFormGroup.get('username')?.invalid && registerFormGroup.get('username')?.touched"></i></span></label>
+      <input type="text" id="username" placeholder="SAMO Beroe" name="username" formControlName="username">
     </p>
-     <!-- minlength="5" -->
-     
-         @if(registerFormGroup.get('username')?.invalid && registerFormGroup.get('username')?.touched ){
-            <div class="alert alert-danger">
-                Username is required!
-            </div>
-            }
+    <!-- minlength="5" -->
+
+    @if(registerFormGroup.get('username')?.invalid && registerFormGroup.get('username')?.touched ){
+    <div class="alert alert-danger">
+      Username is required!
+    </div>
+    }
 
     <!-- email -->
     <p class="field field-icon">
-      <label for="email"><span><i class="fas fa-envelope"></i></span></label>
-      <input  type="email" id="email" placeholder="john.doe@gmail.com"
-         name="email"
-         formControlName="email"
-         >
+      <label for="email"><span><i class="fas fa-envelope"
+            [class.text-danger]="registerFormGroup.get('email')?.invalid && registerFormGroup.get('email')?.touched"></i></span></label>
+      <input type="email" id="email" placeholder="admin@beroe.bg" name="email" formControlName="email">
     </p>
-       @if(registerFormGroup.get('email')?.invalid && registerFormGroup.get('email')?.touched ){
-            <div class="alert alert-danger">
-                Email is required!
-            </div>
-            }
+    @if(registerFormGroup.get('email')?.invalid && registerFormGroup.get('email')?.touched ){
+    <div class="alert alert-danger">
+      Email is required!
+    </div>
+    }
 
     <!-- telephone -->
     <!-- <p class="field field-icon">
@@ -44,27 +40,25 @@
     <div>
       <!-- password -->
       <p class="field field-icon">
-        <label for="password"><span><i class="fas fa-lock"></i></span></label>
-        <input  type="password" id="password" placeholder="******"
-         
-          name="password"
-          formControlName="password">
+        <label for="password"><span><i class="fas fa-lock"
+              [class.text-danger]="registerFormGroup.get('password')?.invalid && registerFormGroup.get('password')?.touched"></i></span></label>
+        <input type="password" id="password" placeholder="******" name="password" formControlName="password">
       </p>
-       @if(registerFormGroup.hasError('passwordsMismatch') ){
-            <div class="alert alert-danger">
-                Passwords do not match.
-            </div>
-            }
-   
+      @if(registerFormGroup.hasError('passwordsMismatch') ){
+      <div class="alert alert-danger">
+        Passwords do not match.
+      </div>
+      }
+
 
       <!-- rePassword -->
       <p class="field field-icon">
-        <label for="rePassword"><span><i class="fas fa-lock"></i></span></label>
-        <input  type="password" id="rePassword" placeholder="******"
-          name="rePassword"
-          formControlName="rePassword">
+        <label for="rePassword"><span>
+            <i class="fas fa-lock"
+              [class.text-danger]="registerFormGroup.get('rePassword')?.invalid && registerFormGroup.get('rePassword')?.touched"></i></span></label>
+        <input type="password" id="rePassword" placeholder="******" name="rePassword" formControlName="rePassword">
       </p>
-   
+
     </div>
 
     <!-- <button>Create Account</button> -->
