--- a/src/app/features/themes/theme-item/theme-item.html
+++ b/src/app/features/themes/theme-item/theme-item.html
@@ -2,25 +2,25 @@
     <div class="theme-name-wrapper">
         <div class="theme-name">
             <a href="#" class="normal">
-                <h2>{{theme.title}} </h2>
+                <h2>{{song.title}} </h2>
             </a>
             <div class="columns">
                 <div [ngClass]="variant">
-                    <p>Artist name: <time>{{theme.artist.name}}</time></p>
+                    <p>Artist name: <time>{{song.artist.name}}</time></p>
                     <div class="nick-name">
-                        <p>Album title: <span>{{theme.album.title}}</span></p>
+                        <p>Album title: <span>{{song.album.title}}</span></p>
                     </div>
                     <!-- ✅ AUDIO PREVIEW -->
                     <div class="audio-preview">
                         <p>Preview:</p>
-                        <audio *ngIf="theme.preview" controls [src]="theme.preview">
+                        <audio *ngIf="song.preview" controls [src]="song.preview">
                             Your browser does not support the audio element.
                         </audio>
                         <!-- <p>Album cover: <a href="{{ theme.album.cover }}" target="_blank" rel="noopener noreferrer">{{ theme.album.cover }}</a></p> -->
                         <p>Album cover:</p>
                         <p>
-                            <a href="{{ theme.album.cover }}" target="_blank" rel="noopener noreferrer">
-                                <img [src]="theme.album.cover" alt="Album Cover"
+                            <a href="{{ song.album.cover }}" target="_blank" rel="noopener noreferrer">
+                                <img [src]="song.album.cover" alt="Album Cover"
                                     style="max-width: 100px; height: auto;">
                             </a>
                         </p>
@@ -31,7 +31,7 @@
             </div>
             <div class="subscribers">
                 <!-- <button class="subscribe">Subscribe</button> -->
-                <p>Artist ID: <span>{{theme.artist.id}}</span></p>
+                <p>Artist ID: <span>{{song.artist.id}}</span></p>
             </div>
         </div>
     </div>
