CRUD added to MongoDB for permanent storage for Deezer songs. Every song can be deleted, updated and shown again. Create is fetched from REST API once... to keep public API not blocking...

--- a/src/app/features/themes/theme-item/theme-item.html
+++ b/src/app/features/themes/theme-item/theme-item.html
@@ -1,8 +1,11 @@
 <div class="theme-container">
+
+    @if(!isEditMode) {
     <div class="theme-name-wrapper">
         <div class="theme-name">
             <a href="#" class="normal">
                 <h2>{{song.title}} </h2>
+                <h2>{{song._id}} </h2>
             </a>
             <div class="columns">
                 <div [ngClass]="variant">
@@ -20,8 +23,7 @@
                         <p>Album cover:</p>
                         <p>
                             <a href="{{ song.album.cover }}" target="_blank" rel="noopener noreferrer">
-                                <img [src]="song.album.cover" alt="Album Cover"
-                                    style="max-width: 100px; height: auto;">
+                                <img [src]="song.album.cover" alt="Album Cover" style="max-width: 100px; height: auto;">
                             </a>
                         </p>
 
@@ -32,7 +34,27 @@
             <div class="subscribers">
                 <!-- <button class="subscribe">Subscribe</button> -->
                 <p>Artist ID: <span>{{song.artist.id}}</span></p>
+                <!-- ✅ Edit & Delete Buttons -->
+                <button (click)="onEdit()">Edit</button>
+                <button (click)="deleteSong(song._id)">Delete</button>
             </div>
         </div>
     </div>
+} @else {
+    <!-- <p>test</p> -->
+     <form [formGroup]="editForm" (ngSubmit)="onSave()">
+      <div>
+        <label>Artist Name:</label>
+        <input type="text" formControlName="artistName" />
+      </div>
+      <div>
+        <label>Album Title:</label>
+        <input type="text" formControlName="albumTitle" />
+      </div>
+      <div class="button-container">
+        <button type="button" (click)="onCancel()">Cancel</button>
+        <button type="submit">Save</button>
+      </div>
+    </form>
+}
 </div>
