routerLink was added from All Artist for easy transfer.

--- a/src/app/features/themes/artist-item/theme-item.html
+++ b/src/app/features/themes/artist-item/theme-item.html
@@ -6,11 +6,14 @@
             </a>
             <div class="columns">
                 <div [ngClass]="variant">
-                    <p>Artist id: <time>{{artist.id}}</time></p>
+                    <p><a [routerLink]="['/songs', artist.id]">
+                            Artist id: <time>{{ artist.id }}</time>
+                        </a>
+                    </p>
                 </div>
                 <app-comment-box [artistId]="artist.id"></app-comment-box>
             </div>
         </div>
-       
+
     </div>
 </div>
