Button name changed

--- a/src/app/features/themes/artist-board/theme-board.html
+++ b/src/app/features/themes/artist-board/theme-board.html
@@ -4,7 +4,7 @@
   </button>
   <!-- New Delete All Songs button -->
   <button (click)="deleteAllSongs()" class="delete-btn" style="margin-top: 5px;margin-right: 15px;">
-    Delete All Songs
+    Delete All Deezer Songs
   </button>
 </div>
 
