--- a/src/app/shared/components/header/header.html
+++ b/src/app/shared/components/header/header.html
@@ -49,6 +49,9 @@
             <li>
                 <a routerLink="/artists">All Artists</a>
             </li>
+             <li>
+                <a routerLink="/radio">Radio mix</a>
+            </li>
             }
         </ul>
     </nav>
